Started to add color styling to the Portraits with Viz page (finished spacing, missing verses, sequence variance, and unique verses, and started highlighting color words); fixed several small typos found in portraits including a missing apostrophe in T-C.xml

--- a/chapter4-1.qmd
+++ b/chapter4-1.qmd
@@ -583,7 +583,7 @@ On grasses she lived and on roots<br>
 for eighteen years in the wilderness.<br>
 Then for twenty years, she only ate<br>
 what the angel of God brought to her.<br>
-The devil came before her first<br>
+The devil came before her first.<br>
 He used to annoy her so much<br>
 making her remember<br>
 whatever she once used to love,<br>
@@ -642,7 +642,7 @@ Sa facon n'iert ja descrite .<br>
 Ne la beaute de ceste dame<br>
 N'iert ja descrite pur nul aume .<br>
 Tant ert cortoise de parler<br>
-Riens n'i avoit kamender .<br>
+Riens n'i avoit k'amender .<br>
 A pleindre fist teu creature<br>
 Quant de sun Creatur n'ot cure .<br>
 ele recevrit mut presenz<br>
@@ -1049,7 +1049,7 @@ Si esracout l'erbe del pre<br>
 cumme altre beste la manjout<br>
 & de rien ne se desconfortout<br>
 a denz beveit del ruissel<br>
-ele naveit altre vaissel<br>
+ele n'aveit altre vaissel<br>
 Ne fait a plaindre le pechie<br>
 dunt le cors fu si chastie<br>
 d'erbes viveit. & de racines<br>
@@ -1100,7 +1100,7 @@ Each of the breasts of the lady<br>
 was not a bit bigger than an apple.<br>
 Above the cleavage of her chest,<br>
 it was white like hawthorn flower.<br>
-She had white arms and white hands,<br>
+She had white arms and beautiful hands,<br>
 and long, slender, and smooth fingers.<br>
 She was neither too big nor too small.<br>
 Her frame could never be described.<br>
