Added an introduction to the appendix; Added digitization links to T-A, T-D, T-E, T-F1 & T-F2 and clearer comments in code for all appendix pages; Edited heading text for Portraits page to clarify T-F1's absence; Added detailed explanation of Portraits w/ Viz page; Changed colors for portrait viz to be more vision-friendly and added a key;

--- a/appendix-T-C.qmd
+++ b/appendix-T-C.qmd
@@ -16,6 +16,7 @@ library(xml2)
 ## Minimal
 
 ```{r results='asis'}
+# START OF "MINIMAL" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-C.xml")
 
@@ -103,6 +104,7 @@ cat(formatted_text)
 ## Intermediate
 
 ```{r results='asis'}
+# START OF "INTERMEDIATE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-C.xml")
 
@@ -199,6 +201,7 @@ cat(formatted_text)
 ## Extensive
 
 ```{r results='asis'}
+# START OF "EXTENSIVE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-C.xml")
 
