--- a/appendix-T-B.qmd
+++ b/appendix-T-B.qmd
@@ -16,6 +16,7 @@ library(xml2)
 ## Nearly Diplomatic
 
 ```{r results='asis'}
+# START OF "NEARLY DIPLOMATIC" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-B-nearly_diplomatic.xml")
 
@@ -64,6 +65,7 @@ cat(formatted_text)
 ## Minimal
 
 ```{r results='asis'}
+# START OF "MINIMAL" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-B.xml")
 
@@ -151,6 +153,7 @@ cat(formatted_text)
 ## Intermediate
 
 ```{r results='asis'}
+# START OF "INTERMEDIATE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-B.xml")
 
@@ -247,6 +250,7 @@ cat(formatted_text)
 ## Extensive
 
 ```{r results='asis'}
+# START OF "EXTENSIVE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-B.xml")
 
