--- a/appendix-T-F2.qmd
+++ b/appendix-T-F2.qmd
@@ -4,6 +4,10 @@ title: "T-F^2^"
 
 # Berlin, Staatsbibliothek, MSS Simulata Orientalia 6
 
+Digitization available via The Digitized Collections of the Staatsbibliothek zu Berlin [HERE](http://resolver.staatsbibliothek-berlin.de/SBB000074F100000000).
+
+Photograph no.101 (featured upside down online) is the recto, and photograph no.89 is the verso.
+
 ```{r setup, include=FALSE}
 # Load the xml2 package
 library(xml2)
@@ -16,6 +20,7 @@ library(xml2)
 ## Minimal
 
 ```{r results='asis'}
+# START OF "MINIMAL" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F2.xml")
 
@@ -103,6 +108,7 @@ cat(formatted_text)
 ## Intermediate
 
 ```{r results='asis'}
+# START OF "INTERMEDIATE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F2.xml")
 
@@ -199,6 +205,7 @@ cat(formatted_text)
 ## Extensive
 
 ```{r results='asis'}
+# START OF "EXTENSIVE" CODE
 # Read the XML content
 xml_file <- read_xml("data/T-F2.xml")
 
