--- a/appendix-intro.qmd
+++ b/appendix-intro.qmd
@@ -8,7 +8,7 @@ With the aim of enhancing both accessibility and transparency, in this appendix,
 For the T copies that have been digitized (T-A, T-D, T-E, T-F^1^, and T-F^2^), links to their digital surrogates are included at the top of each page. With the help of these digitizations, readers may consider my transcriptions and editing choices with greater scrutiny, but for the far more inaccessible T copies, most readers will simply have to trust my judgment. Regardless, this appendix offers a complementary resource, bridging the gap between modern reader and medieval manuscript.
 
 ### General Features
-The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript. Empty brackets (“[]”) indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks (“?”) have been added to represent missing characters.
+The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript, and decorative initials appear in proportion to their size in the manuscript. Empty brackets (“[]”) indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks (“?”) have been added to represent missing characters.
 
 ### Minimal
 The “Minimal” column, offers a transcription with a low level of editorial intervention, but this column should not be considered diplomatic. Word spacing in this column matches the original manuscript, but features like initial and final letter separation are not represented. Capitalization for most proper names like *Marie* and *Deu* has been added, but all other capitalization reflects the contents of the manuscript copy. The letters u/v and i/j have been adjusted where appropriate. Punctuation only appears in this column if it has been used by the medieval scribe, and scribal abbreviations are left unexpanded.
