--- a/appendix-T-A.qmd
+++ b/appendix-T-A.qmd
@@ -38,7 +38,7 @@ process_line <- function(line) {
     # Get folio number and format as standalone line
     folio_num <- xml_attr(line, "n")
     return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-}
+  }
   
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
@@ -51,6 +51,24 @@ process_line <- function(line) {
     }
   } else {
     line_number <- ""
+  }
+  
+  # Process emph elements (decorative initials)
+  emph_elements <- xml_find_all(line, ".//emph")
+  for (emph in emph_elements) {
+    # Get the initial letter text
+    initial_letter <- xml_text(emph)
+    
+    # Get the size attribute (n) and style attribute (rend)
+    size_attr <- xml_attr(emph, "n")
+    style_attr <- xml_attr(emph, "rend")
+    
+    # Create the HTML for the styled initial
+    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
+                             style_attr, size_attr, initial_letter)
+    
+    # Replace the emph element with the styled HTML
+    xml_text(emph) <- styled_initial
   }
   
   # Find all <choice> elements within the line
@@ -72,15 +90,9 @@ process_line <- function(line) {
     xml_set_text(lb, "")
   }
   
-  # Get the text of the line and wrap in a div with line-height control
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s</div>", as.character(line))
-  
-  # Return line with number if applicable
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                      line_number, as.character(line))
-  
-  # Return the processed text of the line
-  return(line_text)
+  # Return line with number if applicable - using xml_text() instead of as.character()
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+                line_number, xml_text(line)))
 }
 
 # Process each line and wrap with <div class='column-break'> at each <cb/>
@@ -141,6 +153,24 @@ process_line <- function(line) {
     line_number <- ""
   }
   
+  # Process emph elements (decorative initials)
+  emph_elements <- xml_find_all(line, ".//emph")
+  for (emph in emph_elements) {
+    # Get the initial letter text
+    initial_letter <- xml_text(emph)
+    
+    # Get the size attribute (n) and style attribute (rend)
+    size_attr <- xml_attr(emph, "n")
+    style_attr <- xml_attr(emph, "rend")
+    
+    # Create the HTML for the styled initial
+    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
+                             style_attr, size_attr, initial_letter)
+    
+    # Replace the emph element with the styled HTML
+    xml_text(emph) <- styled_initial
+  }
+  
   # Find all <choice> elements within the line
   choices <- xml_find_all(line, ".//choice")
   for (choice in choices) {
@@ -169,15 +199,9 @@ process_line <- function(line) {
     xml_set_text(lb, "")
   }
   
-  # Get the text of the line and wrap in a div with line-height control
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s</div>", as.character(line))
-  
-  # Return line with number if applicable
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                      line_number, as.character(line))
-  
-  # Return the processed text of the line
-  return(line_text)
+  # Return line with number if applicable - using xml_text() instead of as.character()
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+                line_number, xml_text(line)))
 }
 
 # Process each line and wrap with <div class='column-break'> at each <cb/>
@@ -238,6 +262,24 @@ process_line <- function(line) {
     line_number <- ""
   }
   
+  # Process emph elements (decorative initials)
+  emph_elements <- xml_find_all(line, ".//emph")
+  for (emph in emph_elements) {
+    # Get the initial letter text
+    initial_letter <- xml_text(emph)
+    
+    # Get the size attribute (n) and style attribute (rend)
+    size_attr <- xml_attr(emph, "n")
+    style_attr <- xml_attr(emph, "rend")
+    
+    # Create the HTML for the styled initial
+    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
+                             style_attr, size_attr, initial_letter)
+    
+    # Replace the emph element with the styled HTML
+    xml_text(emph) <- styled_initial
+  }
+  
   # Find all <choice> elements within the line
   choices <- xml_find_all(line, ".//choice")
   for (choice in choices) {
@@ -257,15 +299,9 @@ process_line <- function(line) {
     xml_set_text(lb, "")
   }
   
-  # Get the text of the line and wrap in a div with line-height control
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s</div>", as.character(line))
-  
-  # Return line with number if applicable
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                      line_number, as.character(line))
-  
-  # Return the processed text of the line
-  return(line_text)
+  # Return line with number if applicable - using xml_text() instead of as.character()
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+                line_number, xml_text(line)))
 }
 
 # Process each line and wrap with <div class='column-break'> at each <cb/>
