Restructured Quarto Book (changed 'chapter' with manuscript descriptions for Appendix 1; changed edited transcriptions to Appendix 2; broke up former chapter 2 into 3 parts with Portraits (w/ and w/o viz) between ch2.2 and ch2.3; adjusted table of contents to accomodate these changes)

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Home"  # This appears in navigation
+title: "Front Matter"  # This appears in navigation
 ---
 ![](images/shesasheep.jpeg){width=100% fig-align="center"}
 
@@ -7,4 +7,4 @@ A Dissertation presented to the Graduate Faculty of the University of Virginia i
 
 ##### Department of French
 ##### University of Virginia
-##### April 2025
+##### April, 2025
