--- a/appendix2-T-F2.qmd
+++ b/appendix2-T-F2.qmd
@@ -40,7 +40,7 @@ process_line <- function(line) {
     # Get folio number and format as standalone line
     folio_num <- xml_attr(line, "n")
     return(sprintf("<div class='folio-number'>%s</div>", folio_num))
-}
+  }
   
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
@@ -61,7 +61,7 @@ process_line <- function(line) {
     # Extract the text from the <orig> tag
     orig_text <- xml_text(xml_find_first(choice, ".//orig"))
     # Remove the <choice> element and replace it with the text from the <orig> tag
-    xml_set_text(choice, orig_text)
+    xml_set_text(choice, paste0(orig_text, " "))
   }
   
   # Now we want to remove any <reg> elements entirely
@@ -74,15 +74,9 @@ process_line <- function(line) {
     xml_set_text(lb, "")
   }
   
-  # Get the text of the line and wrap in a div with line-height control
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s</div>", as.character(line))
-  
   # Return line with number if applicable
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                      line_number, as.character(line))
-  
-  # Return the processed text of the line
-  return(line_text)
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+              line_number, xml_text(line)))
 }
 
 # Process each line and wrap with <div class='column-break'> at each <cb/>
@@ -153,11 +147,11 @@ process_line <- function(line) {
     if (!is.na(abbr_exists) && !is.na(expan_exists)) {
       # If <abbr> and <expan> tags exist, extract only the <reg> text from <expan>
       reg_text <- xml_text(xml_find_first(choice, ".//expan/reg"))
-      xml_set_text(choice, reg_text)
+      xml_set_text(choice, paste0(reg_text, " "))
     } else {
       # For non-abbreviation choices, keep original behavior
       orig_text <- xml_text(xml_find_first(choice, ".//orig"))
-      xml_set_text(choice, orig_text)
+      xml_set_text(choice, paste0(orig_text, " "))
     }
   }
   
@@ -171,15 +165,9 @@ process_line <- function(line) {
     xml_set_text(lb, "")
   }
   
-  # Get the text of the line and wrap in a div with line-height control
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s</div>", as.character(line))
-  
   # Return line with number if applicable
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                      line_number, as.character(line))
-  
-  # Return the processed text of the line
-  return(line_text)
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+              line_number, xml_text(line)))
 }
 
 # Process each line and wrap with <div class='column-break'> at each <cb/>
@@ -240,18 +228,18 @@ process_line <- function(line) {
     line_number <- ""
   }
   
+  # Now we want to remove any <orig> elements entirely
+  orig_elements <- xml_find_all(line, ".//orig")
+  xml_remove(orig_elements)
+  
   # Find all <choice> elements within the line
   choices <- xml_find_all(line, ".//choice")
   for (choice in choices) {
     # Extract the text from the <reg> tag
     reg_text <- xml_text(xml_find_first(choice, ".//reg"))
     # Replace the <choice> element with the text from the <reg> tag
-    xml_set_text(choice, reg_text)
+    xml_set_text(choice, paste0(" ", reg_text, " "))
   }
-  
-  # Now we want to remove any <orig> elements entirely
-  orig_elements <- xml_find_all(line, ".//orig")
-  xml_remove(orig_elements)
   
   # Replace <lb/> tags with HTML line break
   lb_elements <- xml_find_all(line, ".//lb")
@@ -259,15 +247,9 @@ process_line <- function(line) {
     xml_set_text(lb, "")
   }
   
-  # Get the text of the line and wrap in a div with line-height control
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s</div>", as.character(line))
-  
   # Return line with number if applicable
-  line_text <- sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
-                      line_number, as.character(line))
-  
-  # Return the processed text of the line
-  return(line_text)
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+              line_number, xml_text(line)))
 }
 
 # Process each line and wrap with <div class='column-break'> at each <cb/>
