--- a/portraits-viz.qmd
+++ b/portraits-viz.qmd
@@ -1424,7 +1424,7 @@ Quant ele avoit la grant hascie<br>
 <span class="negation">N'estoit merveille</span> s'iert <span class="color-word">noircie<br></span>
 car molt demenoit aspre vie<br>
 plus de .xl. ans a la nue<br>
-<span class="negation">N'iert par merveille</span> s'iert mossue<br>
+<span class="negation">N'iert par merveille</span> s'iert molsue<br>
 povre despens avoit od li<br>
 <span class="unique-verse">Damedex</span> ait de li merci<br>
 .ii. pains avoit <span class="negation">ne gaires grans</span><br>
