--- a/portraits.qmd
+++ b/portraits.qmd
@@ -1347,7 +1347,7 @@ Quant ele avoit la grant hascie<br>
 N'estoit merveille s'iert noircie<br>
 car molt demenoit aspre vie<br>
 plus de .xl. ans a la nue<br>
-N'iert par merveille s'iert mossue<br>
+N'iert par merveille s'iert molsue<br>
 povre despens avoit od li<br>
 Damedex ait de li merci<br>
 .ii. pains avoit ne gaires grans<br>
